nginx-project/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-deployment
  namespace: micro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app:  nginx
    spec:
      containers:
      - name:  nginx-deployment
        image: nginx:latest
        ports:
        - containerPort:  80
          name:  nginx
